Added random and personalized joke functionality to home page

--- a/web/templates/registration.html
+++ b/web/templates/registration.html
@@ -31,6 +31,24 @@
         <p class="help-block">Please provide your E-mail</p>
       </div>
     </div>
+
+    <div class="control-group">
+      <!-- First Name -->
+      <label class="control-label" for="firstname">First Name</label>
+      <div class="controls">
+        <input type="text" id="firstname" name="firstname" placeholder="First" class="input-xlarge">
+        <p class="help-block">Please provide your first name</p>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <!-- Last Name -->
+      <label class="control-label" for="lastname">Last Name</label>
+      <div class="controls">
+        <input type="text" id="lastname" name="lastname" placeholder="Last" class="input-xlarge">
+        <p class="help-block">Please provide your last name</p>
+      </div>
+    </div>
  
     <div class="control-group">
       <!-- Password-->
