--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Home-Jokers</title>
+  <title>Home</title>
 
   <!-- Bootstrap core CSS -->
   <link href="web/static/business-pages/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,34 +25,6 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="web/static/business-pages/about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="web/static/business-pages/contact.html">Contact</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Jokes
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="web/static/business-pages/portfolio-1-col.html">1 Column Portfolio</a>
-              <a class="dropdown-item" href="web/static/business-pages/portfolio-item.html">Single Portfolio Item</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Other Pages
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-              <a class="dropdown-item" href="web/static/business-pages/faq.html">FAQ</a>
-              <a class="dropdown-item" href="web/static/business-pages/404.html">404</a>
-            </div>
-          </li>
-        </ul>
-      </div>
     </div>
   </nav>
 
