--- a/web/templates/registration.html
+++ b/web/templates/registration.html
@@ -2,80 +2,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>New User-Jokers</title>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+	<title>Register</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="web/static/Login_v19/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/vendor/bootstrap/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/vendor/animate/animate.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/vendor/css-hamburgers/hamburgers.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/vendor/animsition/css/animsition.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/vendor/select2/select2.min.css">
+<!--===============================================================================================-->	
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/vendor/daterangepicker/daterangepicker.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/css/util.css">
+	<link rel="stylesheet" type="text/css" href="web/static/Login_v19/css/main.css">
+<!--===============================================================================================-->
 </head>
 <body>
-<form class="form-horizontal" action='/signupact' method="POST">
-  <fieldset>
-    <div id="legend">
-      <legend class="">Register</legend>
-    </div>
-    <div class="control-group">
-      <!-- Username -->
-      <label class="control-label"  for="username">Username</label>
-      <div class="controls">
-        <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
-        <p class="help-block">Username can contain any letters or numbers, without spaces</p>
-      </div>
-    </div>
- 
-    <div class="control-group">
-      <!-- E-mail -->
-      <label class="control-label" for="email">E-mail</label>
-      <div class="controls">
-        <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-        <p class="help-block">Please provide your E-mail</p>
-      </div>
-    </div>
+	
+	<div class="limiter">
+		<div class="container-login100">
+			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
+				<form class="login100-form validate-form" action="/signupact" method="post">
+					<span class="login100-form-title p-b-33">
+						Register
+                    </span>
+                    
+					<div class="wrap-input100 validate-input" data-validate = "Valid username is required.">
+						<input id="username" class="input100" type="text" name="username" placeholder="Username">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+					</div>
 
-    <div class="control-group">
-      <!-- First Name -->
-      <label class="control-label" for="firstname">First Name</label>
-      <div class="controls">
-        <input type="text" id="firstname" name="firstname" placeholder="First" class="input-xlarge">
-        <p class="help-block">Please provide your first name</p>
-      </div>
-    </div>
+					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input id="email" class="input100" type="text" name="email" placeholder="Email">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+					</div>
+                    
+                    <div class="wrap-input100 rs1 validate-input" data-validate="First name is required">
+						<input id="firstname" class="input100" type="text" name="firstname" placeholder="First Name">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+                    </div>
+                    
+                    <div class="wrap-input100 rs1 validate-input" data-validate="Last name is required">
+						<input id="lastname" class="input100" type="text" name="lastname" placeholder="Last Name">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+                    </div>
+                    
+                    <div class="wrap-input100 rs1 validate-input" data-validate="Password is required">
+						<input id="password" class="input100" type="password" name="password" placeholder="Password">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+                    </div>
 
-    <div class="control-group">
-      <!-- Last Name -->
-      <label class="control-label" for="lastname">Last Name</label>
-      <div class="controls">
-        <input type="text" id="lastname" name="lastname" placeholder="Last" class="input-xlarge">
-        <p class="help-block">Please provide your last name</p>
-      </div>
-    </div>
- 
-    <div class="control-group">
-      <!-- Password-->
-      <label class="control-label" for="password">Password</label>
-      <div class="controls">
-        <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-        <p class="help-block">Password should be at least 4 characters</p>
-      </div>
-    </div>
- 
-    <div class="control-group">
-      <!-- Password -->
-      <label class="control-label"  for="password_confirm">Password (Confirm)</label>
-      <div class="controls">
-        <input type="password" id="password_confirm" name="password_confirm" placeholder="" class="input-xlarge">
-        <p class="help-block">Please confirm password</p>
-      </div>
-    </div>
- 
-    <div class="control-group">
-      <!-- Button -->
-      <div class="controls">
-        <button class="btn btn-success">Register</button>
-      </div>
-    </div>
-  </fieldset>
-</form>
+                    <div class="wrap-input100 rs1 validate-input" data-validate="Password is required">
+						<input id="password_confirm" class="input100" type="password" name="password_confirm" placeholder="Password (Confirm)">
+						<span class="focus-input100-1"></span>
+						<span class="focus-input100-2"></span>
+                    </div>
+
+					<div class="container-login100-form-btn m-t-20">
+						<button class="login100-form-btn">
+							Create Account
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+	
+
+	
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/vendor/animsition/js/animsition.min.js"></script>
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/vendor/bootstrap/js/popper.js"></script>
+	<script src="web/static/Login_v19/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/vendor/daterangepicker/moment.min.js"></script>
+	<script src="web/static/Login_v19/vendor/daterangepicker/daterangepicker.js"></script>
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/vendor/countdowntime/countdowntime.js"></script>
+<!--===============================================================================================-->
+	<script src="web/static/Login_v19/js/main.js"></script>
+
 </body>
 </html>
 {{end}}
